cli/tests/snapshot/snapshots/snapshot__eval_stderr_fun_contract_range_nested.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a function
  ┌─ [INPUTS_PATH]/errors/fun_contract_range_nested.ncl:5:59
  │
5 │ let Foo = { foo : Number } in %force% (((fun x => { foo = "a" }) | Dyn -> Foo) null)
  │                                                           ---             --- expected return type
  │                                                           │                
  │                                                           evaluated to this expression
  │
  ┌─ <generated by evaluation 0>:1:1
  │
1 │ "a"
  │ --- evaluated to this value
