cli/tests/snapshot/snapshots/snapshot__eval_stderr_fun_contract_range_violation.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by a function
  ┌─ [INPUTS_PATH]/errors/fun_contract_range_violation.ncl:5:42
  │
5 │ let Foo = Number -> Number in ((fun x => "a") | Foo) 0
  │                                          ---    --- expected type
  │                                          │       
  │                                          evaluated to this expression
  │
  ┌─ <generated by evaluation 0>:1:1
  │
1 │ "a"
  │ --- evaluated to this value
