cli/tests/snapshot/snapshots/snapshot__eval_stderr_function_contract_violation.ncl.snap
---
source: cli/tests/snapshot/main.rs
expression: err
---
error: contract broken by the function `f`
  ┌─ [INPUTS_PATH]/errors/function_contract_violation.ncl:3:25
  │
3 │ let r = { f | Number -> Number = fun x => 'not-a-number } in r.f 7
  │                         ------            ------------- evaluated to this expression
  │                         │                  
  │                         expected return type


